[tool.poetry]
name = "uncle-joes-api"
version = "1.0.0"
description = "Uncle Joe's Coffee Company — FastAPI backend"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "*"
uvicorn = {version = "*", extras = ["standard"]}
bcrypt = "*"
google-cloud-bigquery = "*"
pydantic = {version = "*", extras = ["email"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
